// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Companies components:  Should render correctly 1`] = `
<div>
  <div
    class="header"
    data-testid="company-card"
  >
    <p
      class="title"
    >
      Companies
    </p>
    <input
      class="search"
      placeholder="Search company by name"
      type="text"
    />
    <div
      class="header-icon"
    >
      <i
        class="bi bi-mic-fill"
      />
      <i
        class="bi bi-gear-fill"
      />
    </div>
  </div>
  <div
    class="cards"
  >
    <a
      class="link"
      href="/details/AAPL"
    >
      <div
        class="card"
      >
        <i
          class="bi bi-arrow-right-circle"
        />
        <span
          class="company-data"
        >
          <h3
            class="symbol"
          >
            AAPL
          </h3>
          <p
            class="founded"
          >
            1976
          </p>
        </span>
      </div>
    </a>
    <a
      class="link"
      href="/details/GOOGL"
    >
      <div
        class="card"
      >
        <i
          class="bi bi-arrow-right-circle"
        />
        <span
          class="company-data"
        >
          <h3
            class="symbol"
          >
            GOOGL
          </h3>
          <p
            class="founded"
          >
            1998
          </p>
        </span>
      </div>
    </a>
    <a
      class="link"
      href="/details/MSFT"
    >
      <div
        class="card"
      >
        <i
          class="bi bi-arrow-right-circle"
        />
        <span
          class="company-data"
        >
          <h3
            class="symbol"
          >
            MSFT
          </h3>
          <p
            class="founded"
          >
            1975
          </p>
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Companies list:  Should render correctly 1`] = `
<div>
  <div
    class="header"
  >
    <p
      class="title"
    >
      Companies
    </p>
    <input
      class="search"
      placeholder="Search company by name"
      type="text"
    />
    <div
      class="header-icon"
    >
      <i
        class="bi bi-mic-fill"
      />
      <i
        class="bi bi-gear-fill"
      />
    </div>
  </div>
  <div
    class="cards"
  />
</div>
`;
